cpm-functions-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpm-functions-deployment
spec:
  replicas: 3  # Number of desired replicas
  selector:
    matchLabels:
      app: cpm-functions
  template:
    metadata:
      labels:
        app: cpm-functions
    spec:
      containers:
        - name: cpm-functions
          image: docker.io/fitzsimmonsjp/cpm-functions:latest  # Replace with your Docker image path
          ports:
            - containerPort: 4051  # Replace with the port your Node.js app listens on
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: cpm-functions-deployment
#  labels:
#    app: cpm-functions-svc
#spec:
#  selector:
#    app: cpm-functions
#    tier: web
#  ports:
#    - port: 80
#      targetPort: 4051
#  type: LoadBalancer
#  loadBalancerIP: 34.107.100.15
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpm-functions-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cpm-functions-ip
    networking.gke.io/managed-certificates: managed-cert
  labels:
    app: cpm-functions
spec:
  defaultBackend:
    service:
      name: cpm-functions-backend
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cpm-functions-backend
  labels:
    app: cpm-functions
spec:
  type: NodePort
  selector:
    app: cpm-functions
    tier: web
  ports:
    - port: 8080
      targetPort: 8080
